--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css'%}">
-    <title>Document</title>
+    <title>I LOVE YOU</title>
 </head>
+<style>
+    body{
+        background-color: rgb(43, 43, 43);
+    }
+</style>
 <body>
     {% include 'store/navbar.html' %}
     <div class="container">
