--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-<h1>cart</h1>
-
-<a href="{% url 'checkout' %}"><button class="btn btn-success">Kheckout</button></a>
+<a href="{% url 'checkout' %}"><button class="btn btn-success mt-5">Click Here</button></a>
 
 {% endblock %}
