--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,8 +1,25 @@
 {% extends 'store/base.html' %}
-
+{% load static %}
 {% block content %}
 
-<h1>I LOVE YOU BABE</h1>
+<div class="container justify-content-center">
+    <div class="row">
+        <div class="col-sm-4">
+
+        </div>
+        <div class="col-sm-4 text-center">
+            
+            <h1 style="color: white;">I LOVE YOU BABE</h1>
+            
+            <img width="400" src="{% static 'images/pic.jpg' %}" class="img-thumbnail" alt="">
+            
+            
+        </div>
+        <div class="col-sm-4">
+            
+        </div>
+    </div>
+</div>
 
 
 
