--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-<h1>checkout</h1>
+<div class="container mt-5">
+    <h1 style="color: white;">ATO LUBUTON</h1>
+</div>
 
 {% endblock %}
