--- a/store/templates/store/navbar.html
+++ b/store/templates/store/navbar.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Django</a>
+<nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid" >
+      <a style="color: white;" class="navbar-brand" href="{% url 'home' %}">For babe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Products</a>
+            <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'store' %}">Mimi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'cart' %}">Cart</a>
+            <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'cart' %}">Click here</a>
           </li>
 
 
