--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,7 +1,8 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-
-<div class="btn btn-primary">Products</div>
+<div class="container mt-5">
+    <div class="btn btn-danger">Happy Valentines Babe</div>
+</div>
 
 {% endblock %}
