--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,7 +1,8 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-
-<a href="{% url 'checkout' %}"><button class="btn btn-success mt-5">Click Here</button></a>
-
+<div class="container mt-5">
+    <div class="btn btn-danger">Happy Valentines Babe</div>
+    <a href="{% url 'checkout' %}"><button class="btn btn-success">Click Here</button></a>
+</div>
 {% endblock %}
