--- a/store/templates/store/navbar.html
+++ b/store/templates/store/navbar.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'store' %}">Mimi</a>
+            <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'store' %}">Remove Backgound</a>
           </li>
           <li class="nav-item">
             <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'cart' %}">Click here</a>
