--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container mt-5">
-    <h1 style="color: white;">ATO LUBUTON</h1>
+    <h1 align="center" style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">ATO LUBUTON BABE!</h1>
 </div>
 
 {% endblock %}
