--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,8 +1,19 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="btn btn-danger">Happy Valentines Babe</div>
-    <a href="{% url 'checkout' %}"><button class="btn btn-success">Click Here</button></a>
+<div align="center" class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+
+        </div>
+        <div class="col-sm-4">
+            <div class="btn btn-danger btn-lg mb-2">Happy Valentines Babe</div><br>
+            <a href="{% url 'checkout' %}"><button class="btn btn-success btn-lg">Click Here</button></a>
+        </div>
+        <div class="col-sm-4">
+            
+        </div>
+    </div>
+
 </div>
 {% endblock %}
