--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,16 +2,18 @@
 {% load static %}
 {% block content %}
 
-<div class="container justify-content-center">
+<div class="container mt-2">
     <div class="row">
         <div class="col-sm-4">
 
         </div>
         <div class="col-sm-4 text-center">
             
-            <h1 style="color: white;">I LOVE YOU BABE</h1>
+            <h1 style="color: white;font-family:Georgia, 'Times New Roman', Times, serif;">I LOVE YOU BABE</h1>
             
-            <img width="400" src="{% static 'images/pic.jpg' %}" class="img-thumbnail" alt="">
+            <img width="300" src="{% static 'images/pic.jpg' %}" class="img-thumbnail" alt=""><br>
+
+            <a href="{% url 'cart' %}"><button class="btn btn-success btn-lg mt-3">PIDLITA KO</button></a>
             
             
         </div>
