--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,7 +1,7 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-<div align="center" class="container-fluid mt-5">
+<div align="center" class="container-fluid" style="margin-top: 20%;">
     <div class="row">
         <div class="col-sm-4">
 
