--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container mt-5">
+<div class="container" style="margin-top: 20%;">
     <h1 align="center" style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">ATO LUBUTON BABE!</h1>
 </div>
 
