--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="container mt-2">
+<div class="container"style="margin-top: 20%;">
     <div class="row">
         <div class="col-sm-4">
 
