--- a/store/templates/store/navbar.html
+++ b/store/templates/store/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top mb-5">
     <div class="container-fluid" >
       <a style="color: white;" class="navbar-brand" href="{% url 'home' %}">For babe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
