--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -17,7 +17,7 @@ input[type=file]::file-selector-button {
 
 </style>
 
-    <div class="container mt-5">
+    <div class="container" style="margin-top: 20%;">
         <div class="row">
             <h1 style="margin-bottom: 3%; text-align: center;font-family: Georgia, 'Times New Roman', Times, serif;color: rgb(246, 246, 246);">Background Removal</h1>
 
